--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,9 @@ importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+narwhals==1.26.0
 packaging==24.2
+plotly==6.0.0
 proto-plus==1.25.0
 protobuf==5.29.3
 pyasn1==0.6.1
